--- a/portfolio/static/portfolio/css/portfolio.css
+++ b/portfolio/static/portfolio/css/portfolio.css
@@ -4,10 +4,16 @@
   justify-content: space-between;
 }
 
+.section {
+  min-height: 100vh;
+  width: 100vw;
+}
+
 .banner {
   z-index: 1;
   position: sticky;
   top: 0;
+  height: 6.5rem;
   background: #1f1f1f;
   color: white;
   font-family: "Quicksand", sans-serif;
@@ -21,10 +27,10 @@
 
 .container {
   margin: 0 auto;
+  margin-top: 6.5rem;
   width: 65%;
 }
 .container__item {
-  margin: inherit;
   padding: 2rem 0 1rem 0;
 }
 .container__item * {
@@ -53,8 +59,9 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   grid-auto-rows: 22rem;
-  grid-gap: 2rem;
+  grid-gap: 4rem;
   padding: 1.5rem 0;
+  margin: 0 auto;
 }
 #projects .project {
   cursor: pointer;
@@ -65,7 +72,9 @@
   transition: all 0.3s ease-in-out;
 }
 #projects .project img {
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 #projects .project:hover {
   box-shadow: 0 0 100px gray;
@@ -80,8 +89,8 @@
   opacity: 0;
   z-index: 2;
   background: #040303;
-  color: #2d93ad;
-  font-size: 1.5rem;
+  color: white;
+  font-size: 1rem;
   text-align: center;
   padding: 1rem;
   transition: all 0.3s ease-in-out;
