--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -83,5 +83,9 @@
 
         </div>
     </div>
+    <div class="scroll_btns">
+        <div class="scroll_btn"><i class="arrow up"></i></div>
+        <div class="scroll_btn"><i class="arrow down"></i></div>
+    </div>
     <script src="https://kit.fontawesome.com/6d2ea823d0.js"></script>
 {% endblock %}
