--- a/portfolio/static/portfolio/css/portfolio.css
+++ b/portfolio/static/portfolio/css/portfolio.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300400500600700&display=swap");
+html {
+  scroll-behavior: smooth;
+}
+
 .flex {
   display: flex;
   justify-content: space-between;
@@ -6,7 +10,6 @@
 
 .section {
   min-height: 100vh;
-  width: 100vw;
 }
 
 .banner {
@@ -25,8 +28,7 @@
 }
 
 .container {
-  margin: 0 auto;
-  margin-top: 6.5rem;
+  margin: 6.5rem auto 0;
   width: 65%;
 }
 .container__item {
