--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -88,4 +88,5 @@
         <div class="scroll_btn"><i class="arrow down"></i></div>
     </div>
     <script src="https://kit.fontawesome.com/6d2ea823d0.js"></script>
+    <script src="{% static 'portfolio/js/portfolio.js' %}"></script>
 {% endblock %}
