Fix bug: Enable smooth scrolling

--- a/portfolio/static/portfolio/sass/portfolio.sass
+++ b/portfolio/static/portfolio/sass/portfolio.sass
@@ -2,7 +2,7 @@
 @import 'variables'
 @import 'mixins'
 
-.html
+html
   scroll-behavior: smooth
 
 .flex
@@ -118,6 +118,7 @@
       width: 1.2rem
       border-color: $primary-color
       @include transition-ease
+
     &:hover
       i
         border-color: white
