--- a/portfolio/static/portfolio/css/portfolio.css
+++ b/portfolio/static/portfolio/css/portfolio.css
@@ -97,7 +97,7 @@ html {
   transition: all 0.3s ease-in-out;
 }
 
-.scroll_btns {
+.scroll_buttons {
   z-index: 2;
   position: fixed;
   bottom: 6rem;
@@ -108,18 +108,18 @@ html {
   flex-direction: column;
   justify-content: space-between;
 }
-.scroll_btns .scroll_btn {
+.scroll_buttons .scroll_btn {
   cursor: pointer;
   width: 100%;
   padding: 0.8rem;
 }
-.scroll_btns .scroll_btn i {
+.scroll_buttons .scroll_btn i {
   height: 1.2rem;
   width: 1.2rem;
   border-color: #c2c2c2;
   transition: all 0.3s ease-in-out;
 }
-.scroll_btns .scroll_btn:hover i {
+.scroll_buttons .scroll_btn:hover i {
   border-color: white;
 }
 
@@ -144,6 +144,45 @@ html {
 
 .down {
   transform: rotate(45deg);
+}
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 5;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Modal Content */
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 60%;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close:hover, .close:focus {
+  cursor: pointer;
+  text-decoration: none;
+  color: black;
 }
 
 @media screen and (max-width: 1300px) {
