--- a/portfolio/static/portfolio/sass/portfolio.sass
+++ b/portfolio/static/portfolio/sass/portfolio.sass
@@ -95,7 +95,7 @@ html
       padding: 1rem
       @include transition-ease
 
-.scroll_btns
+.scroll_buttons
   z-index: 2
   position: fixed
   bottom: 6rem
@@ -145,6 +145,44 @@ html
 
 .down
   transform: rotate(45deg)
+
+/* The Modal (background) */
+.modal
+  display: none /* Hidden by default */
+  position: fixed /* Stay in place */
+  z-index: 5 /* Sit on top */
+  left: 0
+  top: 0
+  width: 100% /* Full width */
+  height: 100% /* Full height */
+  overflow: auto /* Enable scroll if needed */
+  background-color: rgba(#000, 0.4) /* Black w/ opacity */
+
+
+/* Modal Content */
+.modal-content
+  position: absolute
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
+
+  background-color: white
+  padding: 20px
+  border: 1px solid #888
+  width: 60%
+  max-width: 100%
+  max-height: 100%
+
+.close
+  color: #aaaaaa
+  float: right
+  font-size: 28px
+  font-weight: bold
+
+  &:hover, &:focus
+    cursor: pointer
+    text-decoration: none
+    color: black
 
 
 @import 'responsive'
