--- a/portfolio/static/portfolio/sass/portfolio.sass
+++ b/portfolio/static/portfolio/sass/portfolio.sass
@@ -2,6 +2,8 @@
 @import 'variables'
 @import 'mixins'
 
+@include animatetop
+
 html
   scroll-behavior: smooth
 
@@ -146,43 +148,47 @@ html
 .down
   transform: rotate(45deg)
 
-/* The Modal (background) */
 .modal
-  display: none /* Hidden by default */
-  position: fixed /* Stay in place */
-  z-index: 5 /* Sit on top */
+  display: none
+  position: fixed
+  z-index: 5
   left: 0
   top: 0
-  width: 100% /* Full width */
-  height: 100% /* Full height */
-  overflow: auto /* Enable scroll if needed */
-  background-color: rgba(#000, 0.4) /* Black w/ opacity */
+  width: 100%
+  height: 100%
+  overflow: auto
+  background-color: rgba(#000, 0.4)
 
+  .modal-content
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
 
-/* Modal Content */
-.modal-content
-  position: absolute
-  top: 50%
-  left: 50%
-  transform: translate(-50%, -50%)
+    background-color: white
+    box-shadow: 0 0 150px #333
+    border-radius: 5px
 
-  background-color: white
-  padding: 20px
-  border: 1px solid #888
-  width: 60%
-  max-width: 100%
-  max-height: 100%
+    padding: 20px
+    width: 60%
+    max-width: 100%
+    max-height: 100%
 
-.close
-  color: #aaaaaa
-  float: right
-  font-size: 28px
-  font-weight: bold
+    animation-name: animatetop
+    animation-duration: 0.3s
 
-  &:hover, &:focus
-    cursor: pointer
-    text-decoration: none
-    color: black
+    .close
+      color: #aaa
+      float: right
+      font-size: 28px
+      font-weight: bold
 
+      &:hover, &:focus
+        cursor: pointer
+        text-decoration: none
+        color: black
+
+.modal_open
+  display: block
 
 @import 'responsive'
