--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -16,11 +16,11 @@
         <div class="container" id="projects">
             <div class="project" id="project_music">
                 <img src="{% static 'portfolio/images/music.png' %}" alt="Music Recommendation System">
-                <p class="title">Music Recommendation System</p>
+                <p class="title">Better Waves</p>
             </div>
             <div class="project" id="project_uit">
                 <img src="{% static 'portfolio/images/unifiedit.jpg' %}" alt="UnifiedIT">
-                <p class="title">UnifiedIT - Institute Management System</p>
+                <p class="title">UnifiedIT</p>
             </div>
         </div>
     </div>
@@ -89,16 +89,30 @@
     </div>
 
     {# Modals #}
+    <div class="modal" id="modal-music">
+        <div class="modal-content">
+            <div class="modal-header">Better Waves - Music Recommendation System<span class="close">&times;</span></div>
+            <div class="modal-body">
+                <div class="description">
+                    <p>
+                        Lorem ipsum Lorem ipsumLorem ipsumLorem ipsumLorem ipsum Lorem ipsumLorem
+                        ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsum Lorem ipsum
+                        Lorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsum Lorem ipsumLorem ipsumLorem
+                        ipsumLorem ipsumLorem ipsum Lorem ipsumLorem ipsum
+                    </p>
+                    <div class="github_link">
+                        <a class="fab fa-github" target="_blank" href="https://github.com/alegend4u/better-waves"></a>
+                    </div>
+
+                </div>
+                <div class="project_gallery"></div>
+            </div>
+        </div>
+    </div>
     <div class="modal" id="modal-uit">
         <div class="modal-content">
             <span class="close">&times;</span>
             Put unifiedit content here.
-        </div>
-    </div>
-    <div class="modal" id="modal-music">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            Put music recommendation system content here.
         </div>
     </div>
 
