--- a/portfolio/static/portfolio/css/portfolio.css
+++ b/portfolio/static/portfolio/css/portfolio.css
@@ -177,7 +177,6 @@ html {
   background-color: white;
   box-shadow: 0 0 150px #333;
   border-radius: 5px;
-  padding: 20px;
   width: 60%;
   max-width: 100%;
   max-height: 100%;
@@ -185,15 +184,56 @@ html {
   animation-duration: 0.3s;
 }
 .modal .modal-content .close {
-  color: #aaa;
+  color: white;
   float: right;
-  font-size: 28px;
+  font-size: 2rem;
   font-weight: bold;
 }
 .modal .modal-content .close:hover, .modal .modal-content .close:focus {
   cursor: pointer;
   text-decoration: none;
   color: black;
+}
+.modal .modal-content .modal-header {
+  width: 100%;
+  background: #2d93ad;
+  color: white;
+  font-size: 1.5rem;
+  padding: 1.25rem;
+}
+.modal .modal-content .modal-body {
+  display: flex;
+  flex-wrap: wrap;
+}
+.modal .modal-content .modal-body .description {
+  position: relative;
+  width: 50%;
+}
+.modal .modal-content .modal-body .description p {
+  padding: 1.25rem;
+}
+.modal .modal-content .modal-body .description .github_link {
+  position: absolute;
+  bottom: 15px;
+  width: 100%;
+  border-radius: inherit;
+  text-align: center;
+}
+.modal .modal-content .modal-body .description .github_link .fa-github {
+  padding: 1.25rem;
+  font-size: 4rem;
+  text-shadow: 0 0 5px gray;
+  transition: all 0.3s ease-in-out;
+}
+.modal .modal-content .modal-body .description .github_link .fa-github:hover {
+  text-shadow: 0 0 20px gray;
+  background: #ddd;
+  border-radius: 5px;
+}
+.modal .modal-content .modal-body .project_gallery {
+  width: 50%;
+  height: 20rem;
+  background: #c2c2c2;
 }
 
 .modal_open {
