--- a/portfolio/templates/portfolio/about.html
+++ b/portfolio/templates/portfolio/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-    <title>Rishabh Prajapati</title>
+    <title>About Rishabh Prajapati</title>
 {% endblock %}
 
 {% block extracss %}
