--- a/portfolio/templates/portfolio/contact.html
+++ b/portfolio/templates/portfolio/contact.html
@@ -10,7 +10,19 @@
 
 {% block content %}
     <div class="split">
-        <div class="contact_info"></div>
+        <div class="contact_info">
+            <p class="header_text">Let's Connect...</p>
+            <p class="subtitle_text">...always open for ideas, suggestions, opinions</p>
+            <form class="feedback_form">
+                <label>Your Name<input type="text" name="name" placeholder="Enter your name here"></label>
+                <label>Your Email<input type="text" name="email" placeholder="Enter your email here" required></label>
+                <label>Share anything on your mind
+                    <textarea name="feedback" rows="5"
+                              placeholder="Any idea, feedback, suggestion, greeting or even your fav music."></textarea>
+                </label>
+            </form>
+            <div class="social_media"></div>
+        </div>
         <img src="{% static 'portfolio/images/contact_image.jpeg' %}" alt="My another image here.">
     </div>
 {% endblock %}
