--- a/static/sass/_resets.sass
+++ b/static/sass/_resets.sass
@@ -12,3 +12,12 @@ html
 
 a
   text-decoration: none
+
+input:focus, textarea:focus, select:focus
+  outline: none
+
+input[type='text'], textarea
+  border: none
+  background: inherit
+  border-bottom: 2px solid black
+  height: 2rem
