--- a/portfolio/templates/portfolio/contact.html
+++ b/portfolio/templates/portfolio/contact.html
@@ -13,13 +13,12 @@
         <div class="contact_info">
             <p class="header_text">Let's Connect...</p>
             <p class="subtitle_text">...always open for ideas, suggestions, opinions</p>
-            <form class="feedback_form">
-                <label>Your Name<input type="text" name="name" placeholder="Enter your name here"></label>
-                <label>Your Email<input type="text" name="email" placeholder="Enter your email here" required></label>
-                <label>Share anything on your mind
-                    <textarea name="feedback" rows="5"
-                              placeholder="Any idea, feedback, suggestion, greeting or even your fav music."></textarea>
-                </label>
+            <form class="feedback_form" method="post">
+                <input type="text" name="name" placeholder="Name">
+                <input type="text" name="email" placeholder="Email" required>
+                <textarea name="feedback" rows="5" required
+                          placeholder="Any idea, feedback, suggestion, greeting or even your fav music."></textarea>
+                <input type="submit" class="submit_button">
             </form>
             <div class="social_media"></div>
         </div>
