--- a/portfolio/static/portfolio/css/contact.css
+++ b/portfolio/static/portfolio/css/contact.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Caveat&family=Quicksand:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Allura&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Secular+One&display=swap");
 * {
@@ -39,20 +40,37 @@ form input, form textarea {
   font-size: 3rem;
   text-align: right;
 }
-.split .contact_info .feedback_form {
+.split .contact_info .page_body {
+  display: flex;
+  justify-content: space-between;
+  margin: 2rem 0;
+}
+.split .contact_info .page_body .quote {
+  margin: auto;
+}
+.split .contact_info .page_body .quote_text {
+  font-size: 3rem;
+  font-family: "Quicksand", sans-serif;
+}
+.split .contact_info .page_body .quote .author {
+  padding-top: 2rem;
+  text-align: right;
+  font-size: 2.5rem;
+  font-family: "Caveat", cursive;
+}
+.split .contact_info .page_body .feedback_form {
   width: fit-content;
-  margin: 2rem 0 2rem auto;
   border-radius: 4px;
 }
-.split .contact_info .feedback_form:focus {
+.split .contact_info .page_body .feedback_form:focus {
   border-color: white;
 }
-.split .contact_info .feedback_form * {
+.split .contact_info .page_body .feedback_form * {
   margin-left: auto;
   border-color: #c2c2c2;
   transition: all 0.3s ease-in-out;
 }
-.split .contact_info .feedback_form input[type=text], .split .contact_info .feedback_form textarea {
+.split .contact_info .page_body .feedback_form input[type=text], .split .contact_info .page_body .feedback_form textarea {
   border: none;
   border-right: 2px solid #aaa;
   padding: 1rem;
@@ -63,15 +81,15 @@ form input, form textarea {
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
 }
-.split .contact_info .feedback_form input[type=text]:focus, .split .contact_info .feedback_form textarea:focus {
+.split .contact_info .page_body .feedback_form input[type=text]:focus, .split .contact_info .page_body .feedback_form textarea:focus {
   border-color: white;
 }
-.split .contact_info .feedback_form textarea {
+.split .contact_info .page_body .feedback_form textarea {
   height: 10rem;
   resize: none;
   text-align: left;
 }
-.split .contact_info .feedback_form .submit_button {
+.split .contact_info .page_body .feedback_form .submit_button {
   padding: 0.8rem;
   border: none;
   border-radius: 4px;
@@ -84,11 +102,11 @@ form input, form textarea {
   box-shadow: 0 4px 0 #4a4a4a;
   transition: all 0.1s linear 0s;
 }
-.split .contact_info .feedback_form .submit_button:hover {
+.split .contact_info .page_body .feedback_form .submit_button:hover {
   bottom: 3px;
   box-shadow: 0 3px 0 #444;
 }
-.split .contact_info .feedback_form .submit_button:active {
+.split .contact_info .page_body .feedback_form .submit_button:active {
   bottom: 0;
   box-shadow: 0 0 0 #444;
 }
