--- a/portfolio/static/portfolio/sass/contact.sass
+++ b/portfolio/static/portfolio/sass/contact.sass
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Quicksand:wght@300&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Allura&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap')
 @import variables
@@ -40,64 +41,81 @@ form
       font-size: 3rem
       text-align: right
 
+    .page_body
+      display: flex
+      justify-content: space-between
+      margin: 2rem 0
 
-    .feedback_form
-      width: fit-content
-      margin: 2rem 0 2rem auto
-      border-radius: 4px
+      .quote
+        margin: auto
 
+        &_text
+          font-size: 3rem
+          font-family: "Quicksand", sans-serif
 
-      &:focus
-        border-color: white
+        .author
+          padding-top: 2rem
 
-      *
-        margin-left: auto
-        border-color: $primary-color
-        @include transition-ease
+          text-align: right
+          font-size: 2.5rem
+          font-family: 'Caveat', cursive
 
-      input[type='text'], textarea
-        border: none
-        border-right: 2px solid #aaa
+      .feedback_form
+        width: fit-content
+        border-radius: 4px
 
-        padding: 1rem
-        width: 30rem
-        margin: 0.5rem 0 1.5rem 0
-
-        text-align: right
-        color: white
-        font-family: "Roboto", sans-serif
-        font-size: 1rem
 
         &:focus
           border-color: white
 
-      textarea
-        height: 10rem
-        resize: none
-        text-align: left
+        *
+          margin-left: auto
+          border-color: $primary-color
+          @include transition-ease
 
-      .submit_button
-        padding: 0.8rem
-        border: none
-        border-radius: 4px
-        position: relative
-        bottom: 4px
+        input[type='text'], textarea
+          border: none
+          border-right: 2px solid #aaa
 
-        text-transform: uppercase
-        color: white
-        background: darkcyan
+          padding: 1rem
+          width: 30rem
+          margin: 0.5rem 0 1.5rem 0
 
-        text-shadow: none
-        box-shadow: 0 4px 0 #4a4a4a
-        transition: all .1s linear 0s
+          text-align: right
+          color: white
+          font-family: "Roboto", sans-serif
+          font-size: 1rem
 
-        &:hover
-          bottom: 3px
-          box-shadow: 0 3px 0 #444
+          &:focus
+            border-color: white
 
-        &:active
-          bottom: 0
-          box-shadow: 0 0 0 #444
+        textarea
+          height: 10rem
+          resize: none
+          text-align: left
+
+        .submit_button
+          padding: 0.8rem
+          border: none
+          border-radius: 4px
+          position: relative
+          bottom: 4px
+
+          text-transform: uppercase
+          color: white
+          background: darkcyan
+
+          text-shadow: none
+          box-shadow: 0 4px 0 #4a4a4a
+          transition: all .1s linear 0s
+
+          &:hover
+            bottom: 3px
+            box-shadow: 0 3px 0 #444
+
+          &:active
+            bottom: 0
+            box-shadow: 0 0 0 #444
   img
     box-shadow: 0 0 10px black
     height: inherit
