--- a/portfolio/templates/portfolio/contact.html
+++ b/portfolio/templates/portfolio/contact.html
@@ -26,8 +26,25 @@
                     <input type="submit" class="submit_button">
                 </form>
             </div>
-            <div class="social_media"></div>
+            <div class="social_media">
+                <a href="https://www.instagram.com/_a.legend_/" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/rishabh-prajapati0/" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="mailto:rishabh.prajapati0@gmail.com" target="_blank">
+                    <i class="fas fa-at"></i>
+                </a>
+                <a href="tel:+91942-928-8602" target="_blank">
+                    <i class="fas fa-phone-square-alt"></i>
+                </a>
+                <a href="https://steamcommunity.com/id/alegend4u/" target="_blank">
+                    <i class="fa fa-steam"></i>
+                </a>
+            </div>
         </div>
         <img src="{% static 'portfolio/images/contact_image.jpeg' %}" alt="My another image here.">
     </div>
+    <script src="https://kit.fontawesome.com/6d2ea823d0.js"></script>
 {% endblock %}
