--- a/portfolio/static/portfolio/sass/contact.sass
+++ b/portfolio/static/portfolio/sass/contact.sass
@@ -122,10 +122,10 @@ form
       display: flex
       justify-content: center
 
-      i
+      a
         color: white
         font-size: 4rem
-        padding-right: 5rem
+        margin-right: 5rem
         text-shadow: 0 0 15px #444
         @include transition-ease
 
