--- a/portfolio/templates/portfolio/contact.html
+++ b/portfolio/templates/portfolio/contact.html
@@ -27,21 +27,11 @@
                 </form>
             </div>
             <div class="social_media">
-                <a href="https://www.instagram.com/_a.legend_/" target="_blank">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/rishabh-prajapati0/" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-                <a href="mailto:rishabh.prajapati0@gmail.com" target="_blank">
-                    <i class="fas fa-at"></i>
-                </a>
-                <a href="tel:+91942-928-8602" target="_blank">
-                    <i class="fas fa-phone-square-alt"></i>
-                </a>
-                <a href="https://steamcommunity.com/id/alegend4u/" target="_blank">
-                    <i class="fa fa-steam"></i>
-                </a>
+                <a href="https://www.instagram.com/_a.legend_/" target="_blank" class="fab fa-instagram"> </a>
+                <a href="https://www.linkedin.com/in/rishabh-prajapati0/" target="_blank" class="fab fa-linkedin"> </a>
+                <a href="mailto:rishabh.prajapati0@gmail.com" target="_blank" class="fas fa-at"> </a>
+                <a href="tel:+91942-928-8602" target="_blank" class="fas fa-phone-square-alt"></a>
+                <a href="https://steamcommunity.com/id/alegend4u/" target="_blank" class="fa fa-steam"></a>
             </div>
         </div>
         <img src="{% static 'portfolio/images/contact_image.jpeg' %}" alt="My another image here.">
