--- a/portfolio/templates/portfolio/contact.html
+++ b/portfolio/templates/portfolio/contact.html
@@ -11,7 +11,7 @@
 {% block content %}
     <div class="split">
         <div class="contact_info">
-            <p class="header_text">Let's Connect...</p>
+            <p class="header_text">Let's Connect</p>
             <p class="subtitle_text">...always open for ideas, suggestions, opinions</p>
             <div class="page_body">
                 <div class="quote">
@@ -29,9 +29,13 @@
             <div class="social_media">
                 <a href="https://www.instagram.com/_a.legend_/" target="_blank" class="fab fa-instagram"> </a>
                 <a href="https://www.linkedin.com/in/rishabh-prajapati0/" target="_blank" class="fab fa-linkedin"> </a>
-                <a href="mailto:rishabh.prajapati0@gmail.com" target="_blank" class="fas fa-at"> </a>
-                <a href="tel:+91942-928-8602" target="_blank" class="fas fa-phone-square-alt"></a>
-                <a href="https://steamcommunity.com/id/alegend4u/" target="_blank" class="fa fa-steam"></a>
+                <a href="https://github.com/alegend4u/" target="_blank" class="fab fa-github"></a>
+{#                <a href="mailto:rishabh.prajapati0@gmail.com" target="_blank" class="fas fa-at"> </a>#}
+{#                <a href="tel:+91942-928-8602" target="_blank" class="fas fa-phone-square-alt"></a>#}
+            </div>
+            <div class="email_phone">
+                <a class="email" href="mailto:rishabh.prajapati0@gmail.com">rishabh.prajapati0@gmail.com</a>
+                <a class="phone" href="tel:+91942-928-8602">+91 942-928-8602</a>
             </div>
         </div>
         <img src="{% static 'portfolio/images/contact_image.jpeg' %}" alt="My another image here.">
