--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -11,6 +11,19 @@
 {% endblock %}
 
 {% block content %}
+    <div class="section" id="section_motivation">
+        <div class="banner">My Motivation</div>
+        <div class="container" id="motivation">
+            <p>
+                It's just that I don't want to die regretting that I could've tried that and It could have been more fun living life.<br>
+                It's just that what incredible things I can do if I consider myself fearless.<br>
+                It's just that I want to jump on the opportunities I get. <br>
+                It's just that I truly want to know my real limits. <br>
+                It's just that I want to LIVE the process, the journey of getting what I want to be. <br>
+            </p>
+            <img src="{% static 'portfolio/images/me.png' %}" alt="Me">
+        </div>
+    </div>
     <div class="section">
         <div class="banner">Projects</div>
         <div class="container" id="projects">
