--- a/portfolio/static/portfolio/sass/portfolio.sass
+++ b/portfolio/static/portfolio/sass/portfolio.sass
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,400&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300400500600700&display=swap')
 @import 'variables'
 @import 'mixins'
@@ -13,6 +14,22 @@ html
 
 .section
   min-height: 100vh
+
+#section_motivation
+  background: $other-color
+  color: white
+
+  .container
+    display: flex
+    justify-content: space-between
+
+    p
+      font-size: 1.3rem
+      font-family: "Lato", sans-serif
+      line-height: 3rem
+
+    img
+      height: 30rem
 
 .banner
   z-index: 1
