--- a/static/sass/_menu.sass
+++ b/static/sass/_menu.sass
@@ -1,5 +1,7 @@
-@import mixins
 @import url('https://fonts.googleapis.com/css2?family=Playball&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400&display=swap')
+
+@import mixins
+@import variables
 
 .nav
   position: fixed
