--- a/portfolio/static/portfolio/sass/_mixins.sass
+++ b/portfolio/static/portfolio/sass/_mixins.sass
@@ -1,5 +1,10 @@
 @import '../../../../static/sass/mixins'
 
+@mixin fullpage
+  width: 100%
+  height: calc(100vh - #{$nav-height})
+  background-size: cover
+
 @mixin animatetop
   @keyframes animatetop
     from
