--- a/portfolio/templates/portfolio/about.html
+++ b/portfolio/templates/portfolio/about.html
@@ -10,6 +10,14 @@
 
 {% block content %}
     <div class="landing">
-        <img src="{% static 'portfolio/images/landing.png' %}" alt="Landing image" class="landing_image">
+    </div>
+    <div class="moreabout">
+
+    </div>
+    <div class="hobbies">
+
+    </div>
+    <div class="recentblogs">
+
     </div>
 {% endblock %}
