--- a/portfolio/templates/portfolio/about.html
+++ b/portfolio/templates/portfolio/about.html
@@ -9,15 +9,16 @@
 {% endblock %}
 
 {% block content %}
-    <div class="landing">
+    <div class="section landing">
+        <img src="{% static 'portfolio/images/landing.png' %}" alt="landing_image">
     </div>
-    <div class="moreabout">
-
+    <div class="section moreabout">
+        <img src="{% static 'portfolio/SVG/about_back.svg' %}" alt="">
     </div>
-    <div class="hobbies">
-
+    <div class="section hobbies">
+        <img src="{% static 'portfolio/SVG/hobbies_back.svg' %}" alt="">
     </div>
-    <div class="recentblogs">
-
+    <div class="section recentblogs">
+        <img src="{% static 'portfolio/SVG/blogs_back.svg' %}" alt="">
     </div>
 {% endblock %}
