--- a/portfolio/static/portfolio/css/about.css
+++ b/portfolio/static/portfolio/css/about.css
@@ -1,29 +1,26 @@
-.landing {
+.section {
   width: 100%;
-  height: calc(100vh - 5rem);
-  background-size: cover;
-  background: url(../images/landing.png);
+  height: calc(100vh - 4.5rem);
+}
+.section img {
+  width: inherit;
+  height: inherit;
+}
+
+.landing img {
+  object-fit: cover;
 }
 
 .moreabout {
-  width: 100%;
-  height: calc(100vh - 5rem);
-  background-size: cover;
-  background: url(../images/aboutback.svg);
+  background: #333333;
 }
 
 .hobbies {
-  width: 100%;
-  height: calc(100vh - 5rem);
-  background-size: cover;
-  background: url(../images/hobbiesback.svg);
+  background: #FFF7E8;
 }
 
 .recentblogs {
-  width: 100%;
-  height: calc(100vh - 5rem);
-  background-size: cover;
-  background: url(../images/blogsback.svg);
+  background: #00565F;
 }
 
 /*# sourceMappingURL=about.css.map */
