--- a/portfolio/static/portfolio/sass/contact.sass
+++ b/portfolio/static/portfolio/sass/contact.sass
@@ -30,7 +30,7 @@ form
     font-size: 1.5rem
 
     .header_text
-      padding-top: 3rem
+      padding-top: 2rem
       font-family: 'Secular One', sans-serif
       font-size: 3rem
 
@@ -46,6 +46,7 @@ form
 
       .quote
         margin: auto
+        padding-right: 1rem
 
         &_text
           font-size: 3rem
@@ -55,7 +56,7 @@ form
           padding-top: 2rem
 
           text-align: right
-          font-size: 2.5rem
+          font-size: 2rem
           font-family: 'Caveat', cursive
 
       .feedback_form
@@ -115,14 +116,14 @@ form
             box-shadow: 0 0 0 #444
 
     .social_media
-      margin-top: 5rem
-      width: 100%
+      margin-top: 2rem
+      width: 50%
       display: flex
       justify-content: center
 
       a
         color: white
-        font-size: 4rem
+        font-size: 3rem
         margin-right: 5rem
         text-shadow: 0 0 15px #444
         @include transition-ease
@@ -146,7 +147,6 @@ form
         color: #111
 
     .email_phone
-      padding-top: 2rem
       display: flex
       justify-content: flex-end
 
