--- a/portfolio/static/portfolio/sass/about.sass
+++ b/portfolio/static/portfolio/sass/about.sass
@@ -2,10 +2,10 @@
 @import 'mixins'
 
 .section
-  @include fullpage
+  width: 100%
+  height: 100vh
 
   img
-    //position: absolute
     width: inherit
     height: inherit
 
